[gd_scene load_steps=37 format=3 uid="uid://jdby8m1f1hub"]

[ext_resource type="Texture2D" uid="uid://y5j4xpblsr2w" path="res://assets/gun_sprites.png" id="1_b1g3i"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_y0qol"]
[ext_resource type="PackedScene" uid="uid://d22xpivkdiv6x" path="res://scenes/spacegun2.tscn" id="2_b848v"]
[ext_resource type="Texture2D" uid="uid://m6l77n8gnx5i" path="res://hud/card_blue.png" id="4_0y6v6"]
[ext_resource type="PackedScene" uid="uid://r2l4edcgo6by" path="res://scenes/m4a1/rootarms_m_4a_1.tscn" id="4_orm5q"]
[ext_resource type="AudioStream" uid="uid://0trtdgid5vg6" path="res://audio/laserShoot.wav" id="4_y7737"]
[ext_resource type="FontFile" uid="uid://b37kky5j3f8pv" path="res://AldotheApache.ttf" id="5_6fr1a"]
[ext_resource type="Texture2D" uid="uid://copv6urgtsvtf" path="res://hud/card_red.png" id="5_cdi60"]
[ext_resource type="PackedScene" uid="uid://0seountxp8el" path="res://scenes/pump/root_pump.tscn" id="5_ew0b6"]
[ext_resource type="Texture2D" uid="uid://damuityfxcup1" path="res://textures/HUD.png" id="5_y53js"]
[ext_resource type="Texture2D" uid="uid://du01ixhldedio" path="res://textures/Flare00.PNG" id="6_ud3h3"]
[ext_resource type="Texture2D" uid="uid://bs2jiw0cr5x26" path="res://hud/card_yellow.png" id="7_qxsgy"]
[ext_resource type="Texture2D" uid="uid://c8bsvfo40vm7s" path="res://textures/Colt_M4A1_silhouette.svg.png" id="10_6u5wv"]
[ext_resource type="Texture2D" uid="uid://ebsd8qtxfq5r" path="res://textures/BULLET.png" id="12_1482b"]
[ext_resource type="Theme" uid="uid://d2f0bmoftf5uf" path="res://scenes/theme.tres" id="12_ff18g"]
[ext_resource type="PackedScene" uid="uid://c0k1tpy014tkh" path="res://scenes/pistol/root_pistolarms.tscn" id="12_qtapa"]
[ext_resource type="Texture2D" uid="uid://cq2ha3s12iatq" path="res://textures/fps_pain.png" id="14_lswij"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7yev1"]
height = 3.98

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_so3xk"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("6_ud3h3")

[sub_resource type="Curve" id="Curve_jomfu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_2lmdh"]
max_value = 5.0
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_8w24f"]
min_value = 0.99
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_v6o5x"]
curve_x = SubResource("Curve_jomfu")
curve_y = SubResource("Curve_2lmdh")
curve_z = SubResource("Curve_8w24f")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a4ih5"]
particle_flag_align_y = true
emission_shape = 1
emission_sphere_radius = 0.2
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveXYZTexture_v6o5x")
color = Color(98.919, 38.919, 1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_usagg"]

[sub_resource type="Theme" id="Theme_qev2e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8my5l"]
bg_color = Color(0.176471, 0.172549, 0.164706, 0.541176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.733333, 0.960784, 1, 0.862745)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bugqy"]
bg_color = Color(0.352941, 0.87451, 1, 0.776471)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0.941176, 0.952941, 0.921569)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0i3w"]
atlas = ExtResource("1_b1g3i")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mk00y"]
atlas = ExtResource("1_b1g3i")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgq4q"]
atlas = ExtResource("1_b1g3i")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jl32h"]
atlas = ExtResource("1_b1g3i")
region = Rect2(0, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyy3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0i3w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mk00y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgq4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jl32h")
}],
"loop": false,
"name": &"shoot",
"speed": 24.0
}]

[sub_resource type="Animation" id="Animation_rwebl"]
resource_name = "Pain"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FpsPain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l5rxc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FpsPain:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvw2h"]
_data = {
"Pain": SubResource("Animation_rwebl"),
"RESET": SubResource("Animation_l5rxc")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 3
script = ExtResource("1_y0qol")

[node name="Area3D" type="Area3D" parent="."]

[node name="Player" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7yev1")

[node name="Player" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7yev1")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
cull_mask = 524287
current = true

[node name="Gun" parent="Head/Camera3D" instance=ExtResource("2_b848v")]
transform = Transform3D(-0.457516, 0.0728732, -0.0168226, 0.0723479, 0.457665, 0.014931, 0.0189548, 0.0121101, -0.463043, 0.790271, -1.03933, -2.78429)
visible = false

[node name="Gun" parent="Head/Camera3D/Gun" index="0"]
transform = Transform3D(0.999798, -0.0260753, 0.017976, 0.0179449, -0.0110531, -0.999832, 0.00870152, 3.01882, -0.00350551, -0.0512487, 0.0590969, -6.3822)
visible = false

[node name="Barrel" type="Node3D" parent="Head/Camera3D"]

[node name="arms_m4a1" parent="Head/Camera3D" instance=ExtResource("4_orm5q")]
transform = Transform3D(0.999063, -0.00181727, 0.0432325, 0.00154258, 0.999978, 0.00638631, -0.0432432, -0.00631364, 0.999045, -0.674149, -3.3091, 1.94011)
visible = false

[node name="Skeleton3D" parent="Head/Camera3D/arms_m4a1/Armature" index="0"]
bones/0/position = Vector3(2.21164, 0.483268, -1.77137)
bones/0/rotation = Quaternion(0.278304, 0.211558, -0.410163, 0.842352)
bones/1/position = Vector3(2.2615, 0.574881, -2.39572)
bones/1/rotation = Quaternion(0.147848, 0.700489, -0.697989, 0.0163623)
bones/4/rotation = Quaternion(0.0937335, -0.0367216, -0.311635, 0.944854)
bones/5/position = Vector3(-0.00499096, 1.22618, -0.0276537)
bones/5/rotation = Quaternion(0.228098, 0.0209118, -0.0950535, 0.968762)
bones/6/rotation = Quaternion(0.0285721, 0.033982, -0.591892, 0.804793)
bones/7/rotation = Quaternion(0.172836, 0.302589, -0.404145, 0.845716)
bones/8/position = Vector3(-0.0258244, 1.03931, 0.206505)
bones/8/rotation = Quaternion(0.227684, 0.0250143, -0.112476, 0.966894)
bones/9/rotation = Quaternion(0.02758, 0.0347917, -0.586115, 0.809011)
bones/10/rotation = Quaternion(0.0601779, 0.144758, -0.484758, 0.860485)
bones/11/position = Vector3(-0.00525427, 0.805585, 0.364651)
bones/11/rotation = Quaternion(0.228588, 0.014607, -0.0682739, 0.971016)
bones/12/rotation = Quaternion(0.057705, 0.0820922, -0.455221, 0.884706)
bones/13/rotation = Quaternion(0.0741641, 0.13643, -0.480354, 0.863219)
bones/14/position = Vector3(0.569273, 0.760323, -0.378795)
bones/17/position = Vector3(4.68007, 2.13106, 3.13397)
bones/17/rotation = Quaternion(0.886339, -0.11244, 0.0643291, -0.444547)
bones/18/rotation = Quaternion(-0.174388, 0.98154, 0.013339, 0.0773968)
bones/19/rotation = Quaternion(-0.274972, -0.0231579, -0.0913258, 0.956825)
bones/20/position = Vector3(1.26309, 0.797129, -6.27534)
bones/20/rotation = Quaternion(-0.235152, -0.480879, 0.36531, 0.761582)
bones/21/rotation = Quaternion(0.280737, -0.7139, 0.584429, -0.264529)
bones/22/position = Vector3(-0.0313306, 1.3178, -0.0339645)
bones/22/rotation = Quaternion(-0.127372, 0.525463, 0.12794, 0.831443)
bones/23/rotation = Quaternion(-0.159842, -0.0321254, 0.190142, 0.968124)
bones/24/rotation = Quaternion(-0.204556, -0.379133, 0.142308, 0.891158)
bones/25/position = Vector3(-0.057816, 1.37471, 0.122557)
bones/25/rotation = Quaternion(0.214499, -0.126162, 0.340994, 0.90653)
bones/26/rotation = Quaternion(0.0184283, 0.0506546, 0.176912, 0.982749)
bones/27/rotation = Quaternion(-0.2697, 0.0292672, 0.451997, 0.849767)
bones/28/position = Vector3(-0.0687726, 1.15057, 0.344515)
bones/28/rotation = Quaternion(0.2712, -0.133826, 0.40759, 0.861633)
bones/29/rotation = Quaternion(0.0405212, -0.109302, 0.106433, 0.987463)
bones/30/rotation = Quaternion(0.0425962, 0.0546807, 0.445918, 0.892386)
bones/31/position = Vector3(-0.116009, 0.845344, 0.42391)
bones/31/rotation = Quaternion(0.22405, -0.108163, 0.422126, 0.871729)
bones/32/rotation = Quaternion(0.0892608, -0.0210775, -0.17118, 0.980962)
bones/33/rotation = Quaternion(0.000838197, -0.118374, 0.267916, 0.956142)
bones/34/position = Vector3(-0.42997, 0.879112, -0.200927)
bones/34/rotation = Quaternion(-0.16251, -0.246088, 0.585497, 0.755132)
bones/35/rotation = Quaternion(0.224647, -0.0682977, -0.122654, 0.964274)
bones/36/rotation = Quaternion(-0.15247, 0.12817, -0.199289, 0.959484)
bones/37/position = Vector3(-3.58178, -0.29809, -2.66785)
bones/37/rotation = Quaternion(0.590245, 0.743877, -0.257936, -0.178119)
bones/38/rotation = Quaternion(0.00782968, 0.978188, -0.00598334, -0.207488)
bones/39/rotation = Quaternion(-0.00233954, -0.0198308, -0.00474106, 0.999789)
bones/40/position = Vector3(2.17542, 1.13301, -4.43429)
bones/40/rotation = Quaternion(0.998419, -0.0238965, -0.0216409, -0.0460442)
bones/42/position = Vector3(2.21931, 1.56729, -4.63626)
bones/42/rotation = Quaternion(0.998566, -0.015148, 0.00329631, -0.0512436)

[node name="Cube" parent="Head/Camera3D/arms_m4a1/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.898468, 0.0102677, -0.0694256, -0.00722085, 0.748452, 0.0463357, 0.0839882, -0.0454917, 0.746667, 2.18725, 1.54536, -5.62532)

[node name="Cube_001" parent="Head/Camera3D/arms_m4a1/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.736809, 0.00945107, -0.00530051, -0.00911134, 0.735467, 0.0448321, 0.00586528, -0.0447618, 0.735505, 2.1259, 0.27707, -5.04842)

[node name="arms_pistol" parent="Head/Camera3D" instance=ExtResource("12_qtapa")]
transform = Transform3D(0.994836, -0.0132692, -0.100625, -0.00478572, 0.984182, -0.177096, 0.101383, 0.176663, 0.979036, -0.201467, -1.20814, 0.149474)
visible = false

[node name="Skeleton3D" parent="Head/Camera3D/arms_pistol/RootNode/Armature" index="0"]
bones/1/position = Vector3(0.00378684, 0.0041852, -0.00813854)
bones/1/rotation = Quaternion(-0.378845, -0.589659, 0.553496, -0.449912)
bones/2/rotation = Quaternion(-0.0616081, 0.079458, -0.540196, 0.835512)
bones/5/rotation = Quaternion(-0.0189021, -0.0209601, -0.243898, 0.96939)
bones/6/rotation = Quaternion(0.0301823, 0.110065, -0.233372, 0.965667)
bones/8/rotation = Quaternion(0.14807, 0.00346778, -0.491334, 0.858286)
bones/9/rotation = Quaternion(-0.0672283, -0.033592, -0.657265, 0.749903)
bones/12/rotation = Quaternion(0.17122, -0.00283799, -0.579595, 0.796709)
bones/13/rotation = Quaternion(-0.230417, -0.246146, -0.40761, 0.848631)
bones/14/rotation = Quaternion(-0.537683, -0.145957, -0.312445, 0.769397)
bones/16/rotation = Quaternion(0.205204, 0.0151398, -0.435516, 0.876349)
bones/17/rotation = Quaternion(-0.344286, -0.59673, -0.209774, 0.693812)
bones/18/rotation = Quaternion(-0.508639, 0.381166, -0.240252, 0.733674)
bones/21/rotation = Quaternion(0.583059, -0.196472, 0.0385354, 0.787373)
bones/24/position = Vector3(0.00232353, 0.000146417, -0.00104168)
bones/24/rotation = Quaternion(0.136205, 0.62591, 0.742406, 0.196263)
bones/49/rotation = Quaternion(-0.658381, 0.00647072, -0.406694, 0.633318)
bones/50/rotation = Quaternion(-0.045011, 0.861453, 0.504428, -0.0377548)
bones/51/rotation = Quaternion(0.0209315, 0.39253, -0.542905, 0.742116)

[node name="USP" parent="Head/Camera3D/arms_pistol/RootNode/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.992788, 0.11367, 0.0381091, -0.11482, 0.992949, 0.0294703, -0.0344905, -0.0336334, 0.998839, 0.00129601, 0.00185825, 0.00269921)

[node name="Cube" parent="Head/Camera3D/arms_pistol/RootNode/Armature/Skeleton3D" index="1"]
transform = Transform3D(0.0353511, -0.0110038, -0.00448095, 0.00834229, 0.0469491, 0.0106843, 0.000579088, -0.0046053, 0.119628, 0.00312545, 0.0123088, 0.00402824)

[node name="PumpShotgun" parent="Head/Camera3D" instance=ExtResource("5_ew0b6")]
transform = Transform3D(0.998171, -0.00334947, -0.0603634, -9.97476e-11, 0.998464, -0.0554033, 0.0604562, 0.0553019, 0.996638, -0.388034, -4.66284, 0.973434)

[node name="Skeleton3D" parent="Head/Camera3D/PumpShotgun/RootNode/Armature" index="0"]
bones/0/position = Vector3(0.0215151, 0.0174208, 0.00418768)
bones/0/rotation = Quaternion(0.806277, 0.429488, -0.145087, 0.38001)
bones/2/position = Vector3(0.0223903, 0.0235945, 0.00530853)
bones/2/rotation = Quaternion(0.132922, 0.985793, 0.0195955, -0.100793)
bones/8/rotation = Quaternion(0.0895532, 0.0127361, -0.675054, 0.732202)
bones/12/rotation = Quaternion(0.139265, -0.00108449, -0.731075, 0.667933)
bones/17/rotation = Quaternion(0.231457, 0.182888, -0.602844, 0.741323)
bones/20/rotation = Quaternion(0.284739, -0.0345199, 0.103524, 0.952373)
bones/21/rotation = Quaternion(0.0269326, 0.116445, 0.0609214, 0.990961)
bones/23/position = Vector3(0.0434421, -0.0335898, 0.0187046)
bones/23/rotation = Quaternion(-0.291227, 0.139374, 0.0110194, 0.946383)
bones/24/rotation = Quaternion(-0.174387, 0.98154, 0.0133391, 0.0773968)
bones/25/rotation = Quaternion(-0.274117, -0.0230785, -0.0909036, 0.957112)
bones/27/position = Vector3(0.00819836, 0.0589272, 0.00841207)
bones/27/rotation = Quaternion(0.389217, -0.407274, -0.0257176, 0.825819)
bones/28/rotation = Quaternion(-0.119111, 0.756381, -0.584419, 0.268616)
bones/39/rotation = Quaternion(0.041045, 0.144376, 0.555718, 0.817709)
bones/45/rotation = Quaternion(-0.252074, -0.356386, 0.511388, 0.740223)
bones/46/rotation = Quaternion(0.241676, -0.00809307, -0.201046, 0.949267)
bones/49/position = Vector3(-0.0328255, 0.0211721, -0.0103252)
bones/49/rotation = Quaternion(-0.14585, -0.693988, -0.282379, 0.646042)
bones/50/rotation = Quaternion(0.224221, 0.929624, -0.197846, -0.215361)
bones/51/rotation = Quaternion(-0.074049, 0.158304, -0.27962, 0.944071)
bones/53/position = Vector3(0.0208383, 0.0363813, 0.0136639)
bones/53/rotation = Quaternion(-0.0349792, -0.0202028, 0.0796278, 0.996006)
bones/56/position = Vector3(0.0187851, 0.0649792, 0.00618482)
bones/56/rotation = Quaternion(-0.0364069, 0.0181405, 0.0689652, 0.99679)

[node name="Cube_003" parent="Head/Camera3D/PumpShotgun/RootNode/Armature/Skeleton3D" index="0"]
transform = Transform3D(0.994576, -0.104014, -1.49012e-08, 0.104014, 0.994576, 1.71363e-07, -7.45058e-09, -1.63913e-07, 1, 0.00261197, 0.00695286, 0.000845269)

[node name="Cube_001" parent="Head/Camera3D/PumpShotgun/RootNode/Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.994202, 0.107528, 4.47035e-08, -0.107528, -0.994202, -1.63913e-07, 2.6077e-08, -1.71363e-07, 1, 0.0189093, 0.0694256, 0.0128088)

[node name="Sparks" type="GPUParticles3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0482557, 0.0589893, -0.00235271)
material_override = SubResource("StandardMaterial3D_so3xk")
emitting = false
amount = 20
speed_scale = 2.94
explosiveness = 1.0
fixed_fps = 60
fract_delta = false
draw_order = 1
transform_align = 2
process_material = SubResource("ParticleProcessMaterial_a4ih5")
draw_pass_1 = SubResource("QuadMesh_usagg")

[node name="RayCast3D" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, 0)
collision_mask = 3
collide_with_areas = true
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
positional_shadow_atlas_size = 4096
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Hud" type="Polygon2D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_y53js")
polygon = PackedVector2Array(754, -536, 751.9, -536, 746.9, -530, 743.3, -530, 661.4, -495, 658.4, -495, 583.4, -466, 580.3, -466, 490.3, -436, 486.1, -436, 348.3, -399, 343.1, -399, 329, -414.2, 329, -416.3, 280.9, -488, 270, -488, 124, -482, 79, -482, -41, -480, -41, -481, -163, -482, -163, -483.1, -280, -488.9, -326, -421.5, -326, -419.6, -328.6, -413, -330, -413, -340, -400, -342.9, -400, -349, -398.4, -349, -400.5, -449, -424.4, -449, -425.5, -584, -466.5, -584, -467.6, -667, -497.6, -667, -498.6, -747, -530.6, -747, -532.1, -753, -537.1, -753, -540, 754, -540, -845, 302.7, -845, 307, -828.2, 447, -821.2, 447, -456, 411.8, -456, 413.7, -267, 498.7, -267, 500.3, -262, 506.3, -262, 524, -261, 540, -960, 540, -960, 248.8, 960, 540, 261, 540, 261, 522, 262, 522, 262, 505, 263.9, 505, 267.8, 498, 270.6, 498, 457.6, 412, 461.842, 411.842, 828, 446.8, 828, 440.9, 845.2, 302, 847.2, 302, 852.2, 297, 855.6, 297, 956, 250.8, 956, 249, 960, 249)
uv = PackedVector2Array(1714, 4, 1711.9, 4, 1706.9, 10, 1703.3, 10, 1621.4, 45, 1618.4, 45, 1543.4, 74, 1540.3, 74, 1450.3, 104, 1446.1, 104, 1308.3, 141, 1303.1, 141, 1289, 125.8, 1289, 123.7, 1240.9, 52, 1230, 52, 1084, 58, 1039, 58, 919, 60, 919, 59, 797, 58, 797, 56.9, 680, 51.1, 634, 118.5, 634, 120.4, 631.4, 127, 630, 127, 620, 140, 617.1, 140, 611, 141.6, 611, 139.5, 511, 115.6, 511, 114.5, 376, 73.5, 376, 72.4, 293, 42.4, 293, 41.4, 213, 9.4, 213, 7.9, 207, 2.9, 207, 0, 1714, 0, 115, 842.7, 115, 847, 131.8, 987, 138.8, 987, 504, 951.8, 504, 953.7, 693, 1038.7, 693, 1040.3, 698, 1046.3, 698, 1064, 699, 1080, 0, 1080, 0, 788.8, 1920, 1080, 1221, 1080, 1221, 1062, 1222, 1062, 1222, 1045, 1223.9, 1045, 1227.8, 1038, 1230.6, 1038, 1417.6, 952, 1420.1, 952, 1788, 986.8, 1788, 980.9, 1805.2, 842, 1807.2, 842, 1812.2, 837, 1815.6, 837, 1916, 790.8, 1916, 789, 1920, 789)
polygons = [PackedInt32Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41), PackedInt32Array(42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54), PackedInt32Array(55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73)]

[node name="Subviewport_camera" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
cull_mask = 524288
current = true

[node name="Health" type="ProgressBar" parent="CanvasLayer"]
offset_left = 79.0
offset_top = 560.0
offset_right = 221.0
offset_bottom = 581.0
rotation = -0.0951058
scale = Vector2(1.40709, 1.3881)
theme = SubResource("Theme_qev2e")
theme_override_styles/background = SubResource("StyleBoxFlat_8my5l")
theme_override_styles/fill = SubResource("StyleBoxFlat_bugqy")
value = 69.0
show_percentage = false

[node name="GunBase" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 169.0
offset_top = 102.0
offset_right = 209.0
offset_bottom = 142.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/GunBase"]
visible = false
position = Vector2(768, 488)
scale = Vector2(0.624023, 0.624023)
sprite_frames = SubResource("SpriteFrames_cyy3v")
animation = &"shoot"
autoplay = "idle"

[node name="Crosshair" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.377106, 0.377106)
size_flags_horizontal = 6
size_flags_vertical = 4
metadata/_edit_use_anchors_ = true

[node name="DeathScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -312.0
offset_top = -156.0
offset_right = -272.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(16.0225, 6.34772)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="CanvasLayer/DeathScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Bullet" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(1064, 563)
rotation = 0.0932102
scale = Vector2(0.185737, 0.138461)
texture = ExtResource("12_1482b")

[node name="lblAmmo" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.0616319
anchor_bottom = 0.0833333
offset_left = 888.0
offset_top = 524.0
offset_right = 1145.0
offset_bottom = 588.0
rotation = 0.0931271
scale = Vector2(0.483834, 0.362757)
theme = ExtResource("12_ff18g")
theme_override_colors/font_color = Color(0.638256, 0.891348, 0.959366, 1)
theme_override_font_sizes/font_size = 86
text = "15 | 75"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="lblEnergy" type="Label" parent="CanvasLayer"]
visible = false
offset_right = 98.0
offset_bottom = 23.0
text = "ENERGY: 100"
metadata/_edit_use_anchors_ = true

[node name="Interact" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -434.0
offset_top = 117.0
offset_right = 796.0
offset_bottom = 288.0
grow_horizontal = 2
scale = Vector2(0.700571, 0.700571)
theme_override_fonts/font = ExtResource("5_6fr1a")
theme_override_font_sizes/font_size = 100
text = "locked
red keycard requIRED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FpsPain" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("14_lswij")

[node name="Node" type="Node2D" parent="CanvasLayer"]
position = Vector2(452, -43)
scale = Vector2(0.61, 0.61)

[node name="CardBlue" type="Sprite2D" parent="CanvasLayer/Node"]
position = Vector2(1097, 142)
scale = Vector2(0.231618, 0.231618)
texture = ExtResource("4_0y6v6")

[node name="Label" type="Label" parent="CanvasLayer/Node/CardBlue"]
texture_filter = 2
offset_left = -43.6701
offset_top = 200.868
offset_right = 4.32988
offset_bottom = 284.868
scale = Vector2(2.34786, 2.34786)
theme_override_fonts/font = ExtResource("5_6fr1a")
theme_override_font_sizes/font_size = 100
text = "b"

[node name="CardRed" type="Sprite2D" parent="CanvasLayer/Node"]
position = Vector2(932, 142)
scale = Vector2(0.232, 0.232)
texture = ExtResource("5_cdi60")

[node name="Label" type="Label" parent="CanvasLayer/Node/CardRed"]
texture_filter = 2
offset_left = -67.2697
offset_top = 200.537
offset_right = -19.2697
offset_bottom = 284.537
scale = Vector2(2.34786, 2.34786)
theme_override_fonts/font = ExtResource("5_6fr1a")
theme_override_font_sizes/font_size = 100
text = "R"

[node name="CardYellow" type="Sprite2D" parent="CanvasLayer/Node"]
position = Vector2(1016, 142)
scale = Vector2(0.232, 0.232)
texture = ExtResource("7_qxsgy")

[node name="Label" type="Label" parent="CanvasLayer/Node/CardYellow"]
texture_filter = 2
offset_left = -54.8335
offset_top = 207.603
offset_right = -3.8335
offset_bottom = 291.603
scale = Vector2(2.34786, 2.34786)
theme_override_fonts/font = ExtResource("5_6fr1a")
theme_override_font_sizes/font_size = 100
text = "Y"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_lvw2h")
}

[node name="ColtM4a1Silhouette_svg" type="Sprite2D" parent="."]
position = Vector2(568, 73)
scale = Vector2(0.202315, 0.202315)
texture = ExtResource("10_6u5wv")

[node name="sndShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y7737")
volume_db = -10.0
pitch_scale = 1.29
bus = &"SFX"

[connection signal="HideHUDInteract" from="." to="." method="_on_hide_hud_interact"]
[connection signal="UpdateHUDSignal" from="." to="." method="_on_update_hud_signal"]
[connection signal="animation_changed" from="Head/Camera3D/arms_m4a1/AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="Head/Camera3D/arms_m4a1/AnimationTree" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_changed" from="Head/Camera3D/arms_pistol/AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="Head/Camera3D/arms_pistol/AnimationTree" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Head/Camera3D/PumpShotgun/AnimationTree" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]

[editable path="Head/Camera3D/Gun"]
[editable path="Head/Camera3D/arms_m4a1"]
[editable path="Head/Camera3D/arms_pistol"]
[editable path="Head/Camera3D/PumpShotgun"]
